
Alle relevanten Änderungen an diesem Modul werden hier dokumentiert.
Format basiert auf [Keep a Changelog](https://keepachangelog.com/de/1.0.0/) und [SemVer](https://semver.org/lang/de/).

---

## [1.8.4] – 2026-01-26
### Changed
- Header zeigt keinen Titeltext mehr und nutzt für die Aspen-Datei das Auto-Update-Badge wie LinkButtonsPlus, inkl. Status-Hinweis im Optionen-Dialog.

## [1.8.3] – 2026-01-26
### Changed
- Header-Layout an das LinkButtonsPlus-Design angepasst, inkl. kompakter Titel- und Aktionsleiste.

## [1.8.2] – 2025-05-07
### Fixed
- Farb-Layer der Gerätekarten folgen jetzt wie beim Aspenboard live allen Änderungen im HTML-Menü und greifen Style-Änderungen sowie CSS-Variablen sofort auf.

## [1.8.1] – 2025-05-04
### Changed
- Farbwahl des Moduls folgt nun live den Einstellungen im HTML-Menü und aktualisiert Palette sowie Vorschau ohne Reload.

## [1.8.0] – 2025-10-23
### Changed
- Modulfarben vollständig auf das Main/Alternative/Accent-System umgestellt und direkt an die neuen globalen Layer-Variablen angebunden.

## [1.7.0] – 2025-10-19
### Changed
- Modul nutzt jetzt die neuen CSS-Variablen der globalen Farblayer, wodurch aktuelle Farbkonfigurationen direkt übernommen werden.

## [1.6.1] – 2025-10-13
### Fixed
- Automatisch ergänztes Standardfeld für „KV-Stunden“ entfernt, sodass nur noch explizit konfigurierte Zusatzfelder geladen werd
  en.

## [1.5.1] – 2025-10-02
### Fixed
- Standardfeld-Erkennung nutzt nun eine erweiterte Kandidatenliste, sodass hinterlegte Basisfelder wieder korrekt mit Aspen-Spalten abgeglichen werden.
- Die Auftragsspalte erkennt zusätzlich das Alias `AUFTRAGS_NO`, wodurch importierte Excel-Dateien mit diesem Header automatisch übernommen werden.

## [1.5.0] – 2025-10-02
### Added
- Kopfzeile blendet automatisch den ermittelten Gerätenamen aus den Namensregeln ein und aktualisiert sich bei Änderungen am P/N-Feld.