@@ -8,6 +8,7 @@ Format basiert auf [Keep a Changelog](https://keepachangelog.com/de/1.0.0/) und 
 ## [1.8.4] – 2026-01-26
 ### Changed
 - Header zeigt keinen Titeltext mehr und nutzt für die Aspen-Datei das Auto-Update-Badge wie LinkButtonsPlus, inkl. Status-Hinweis im Optionen-Dialog.
+- Zusatzbuttons sind kompakter skaliert und das Auto-Update sitzt rechts oben unterhalb der Buttons.
 
 ## [1.8.3] – 2026-01-26
 ### Changed
